# trivial_django_app

./: README.md  pyproject.toml
.github/workflows/: tests.yml
mysite/mysite/: celery.py  settings.py  urls.py
mysite/polls/: models.py  serializers.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
